--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ npm-debug.log
 # local settings
 .elixir_ls/
 .vscode
+
+# Cypress testing will only be setup by each clone
+/cypress/
+cypress.json
