--- a/assets/package.json
+++ b/assets/package.json
@@ -23,7 +23,9 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^4.0.4",
     "sass-loader": "^8.0.2",
+    "tailwindcss": "^1.9.6",
     "terser-webpack-plugin": "^2.3.2",
     "webpack": "4.41.5",
     "webpack-cli": "^3.3.2"
