--- a/assets/package.json
+++ b/assets/package.json
@@ -23,6 +23,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-import": "^13.0.0",
     "postcss-loader": "^4.0.4",
     "sass-loader": "^8.0.2",
     "tailwindcss": "^1.9.6",
