--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,10 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "tailwindcss": "^1.9.6",
+    "@tailwindcss/typography": "^0.2.0",
+    "@tailwindcss/ui": "^0.3.0",
+    "alpinejs": "^2.4.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
